add chrome binary and fix pom

--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
             [...]
           </systemPropertyVariables>
           <includes>
-         <include>**/MyBasketTests.java</include>
+         <include>**/ZooplaTests.java</include>
          </includes>
         </configuration>
       </plugin>
